Fix homepage-links to be flex-wrap: wrap

--- a/css/style.css
+++ b/css/style.css
@@ -156,8 +156,9 @@ footer {
 .homepage-links {
     display: flex;
     gap: 20px;
+    flex-wrap: wrap;
     justify-content: center;
-    padding: 20px 0;
+    margin-top: 40px;
 }
 
 .link-card {
